5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1758_1183.log
== TEST (2019-05-23 11:10:43) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))

print(abs(v1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:08) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<v1 and v[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:13) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<v1 and v[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:48) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<v1 and v[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:54) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<v1 and v[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:04) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<v1 and v1[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:19) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<v1[i] and v1[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:11) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<size(v1) and v1[i]<0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:42) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<size(v1) and v1[i]>0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:22:48) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<size(v1) and v1[i]>0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:17) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<size(v1) and v1[i]>0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:06) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<size(v1) and v1[i]>0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:26:21) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0

while(i<size(v1) and v1[i]>0):
	i=i+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:25) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
while(i<size(v1)):
	if(v1[i]>0):
	i=i+1
print(i)


-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:36) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
while(i<size(v1)):
	if(v1[i]>0):
	i=i+1
	print(i)


-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:44) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:30:52) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:09) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:21) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
	print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:45:37) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
k=0
b=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
arange(i)

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:45:42) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
k=0
b=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
arange(i)
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:46:00) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
k=0
b=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
arange(i)
print(j)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:47:07) 
-- CODE:
from math import*
from numpy import*
v1= array(eval(input("qual seu vetor de elementos inteiros")))
i=0
j=0
k=0
b=0
while(i<size(v1)):
	if(v1[i]>0):
		i=i+1
	j=j+1
arrange(i)
print(i)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:52:28) 
-- CODE:
om numpy import*
v = array(eval(input("vetor: ")))
t = 0
a = 0
n = size(v)
while (t < n):
	if v[t]<0:
		a = a + 1
	t = t + 1
v1 = zeros(n-a, dtype=int)
t = 0
i = 0
while (t < n):
	if v[t]>=0:
		v1[i] = v[t]
		i = i + 1
		t = t + 1
	else:
		t = t+1
print(v1)
-- EXECUTION TIME:
0.111236
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 1
    om numpy import*
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:52:30) 
-- CODE:
om numpy import*
v = array(eval(input("vetor: ")))
t = 0
a = 0
n = size(v)
while (t < n):
	if v[t]<0:
		a = a + 1
	t = t + 1
v1 = zeros(n-a, dtype=int)
t = 0
i = 0
while (t < n):
	if v[t]>=0:
		v1[i] = v[t]
		i = i + 1
		t = t + 1
	else:
		t = t+1
print(v1)
-- EXECUTION TIME:
0.160296
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 1
    om numpy import*
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:52:55) 
-- CODE:
om numpy import*
v = array(eval(input("vetor: ")))
t = 0
a = 0
n = size(v)
while (t < n):
	if v[t]<0:
		a = a + 1
	t = t + 1
v1 = zeros(n-a, dtype=int)
t = 0
i = 0
while (t < n):
	if v[t]>=0:
		v1[i] = v[t]
		i = i + 1
		t = t + 1
	else:
		t = t+1
print(v1)
-- EXECUTION TIME:
0.134595
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 1
    om numpy import*
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:52:58) 
-- CODE:
om numpy import*
v = array(eval(input("vetor: ")))
t = 0
a = 0
n = size(v)
while (t < n):
	if v[t]<0:
		a = a + 1
	t = t + 1
v1 = zeros(n-a, dtype=int)
t = 0
i = 0
while (t < n):
	if v[t]>=0:
		v1[i] = v[t]
		i = i + 1
		t = t + 1
	else:
		t = t+1
print(v1)
-- ERROR:
File "XXXX", line 1
    om numpy import*
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:53:08) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
t = 0
a = 0
n = size(v)
while (t < n):
	if v[t]<0:
		a = a + 1
	t = t + 1
v1 = zeros(n-a, dtype=int)
t = 0
i = 0
while (t < n):
	if v[t]>=0:
		v1[i] = v[t]
		i = i + 1
		t = t + 1
	else:
		t = t+1
print(v1)
-- EXECUTION TIME:
0.443289
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
